# llm-quota-burner

./: .env  .gitignore  Cargo.toml  LICENSE.md  PROJECT_README.md  PROMPT.md  README.md  REPONSE.md  draw_blueprint.py  energy.json  machines.json  next.config.js  package.json  recipes.json  tailwind.config.js  tsconfig.json  write_png.py
app/: layout.tsx  page.tsx
app/api/album/[id]/: route.ts
app/api/albums/: route.ts
components/: AlbumList.tsx  ComicViewer.tsx
lib/: store.ts
server/: index.ts
src/: main.rs  models.rs  routes.rs  scraper_service.rs
static/: app.js  styles.css
styles/: globals.css
templates/: index.html
