[package]
name = "terra-station-comic-reader"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client and scraping
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
